Provide DC groups to repair options when starting repair
Summary: Fixes a bug in the auto-repair scheduler where the repair DC groups were not being provided to the repair job.

Test Plan:
  # Deployed the changes to a test instance
  # Configured auto-repair on this instance to have DC groups: https://odin.uberinternal.com/cadence/execution/odin-dca1/e6f86b8b-9805-4495-9707-fc70338d1e98/7f65bda6-e85d-4183-9334-abb4e920abad
  # Verified that these groups are provided to the repair command:
{F950466959}

Reviewers: O2017 Cassandra Service, #ldap_cassandra-super-users, yuqiy

Reviewed By: O2017 Cassandra Service, #ldap_cassandra-super-users, yuqiy

Subscribers: yuqiy

JIRA Issues: SO-32238

Differential Revision: https://code.uberinternal.com/D14611551